--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -11,3 +11,4 @@ add_subdirectory(triangle)
 add_subdirectory(grains)
 add_subdirectory(raindrops)
 add_subdirectory(pangram)
+add_subdirectory(two-fer)
