--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -17,3 +17,4 @@ add_subdirectory(raindrops)
 add_subdirectory(pangram)
 add_subdirectory(two-fer)
 add_subdirectory(grade-school)
+add_subdirectory(hamming)
