--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -18,3 +18,4 @@ add_subdirectory(pangram)
 add_subdirectory(two-fer)
 add_subdirectory(grade-school)
 add_subdirectory(hamming)
+add_subdirectory(nucleotide-count)
