--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -19,3 +19,4 @@ add_subdirectory(two-fer)
 add_subdirectory(grade-school)
 add_subdirectory(hamming)
 add_subdirectory(nucleotide-count)
+add_subdirectory(rna-transcription)
