--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -20,3 +20,4 @@ add_subdirectory(grade-school)
 add_subdirectory(hamming)
 add_subdirectory(nucleotide-count)
 add_subdirectory(rna-transcription)
+add_subdirectory(collatz-conjecture)
