--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -21,3 +21,4 @@ add_subdirectory(hamming)
 add_subdirectory(nucleotide-count)
 add_subdirectory(rna-transcription)
 add_subdirectory(collatz-conjecture)
+add_subdirectory(nth-prime)
