--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -22,3 +22,4 @@ add_subdirectory(nucleotide-count)
 add_subdirectory(rna-transcription)
 add_subdirectory(collatz-conjecture)
 add_subdirectory(nth-prime)
+add_subdirectory(queen-attack)
