--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -23,3 +23,4 @@ add_subdirectory(rna-transcription)
 add_subdirectory(collatz-conjecture)
 add_subdirectory(nth-prime)
 add_subdirectory(queen-attack)
+add_subdirectory(say)
