--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -24,3 +24,4 @@ add_subdirectory(collatz-conjecture)
 add_subdirectory(nth-prime)
 add_subdirectory(queen-attack)
 add_subdirectory(say)
+add_subdirectory(gigasecond)
