--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -25,3 +25,4 @@ add_subdirectory(nth-prime)
 add_subdirectory(queen-attack)
 add_subdirectory(say)
 add_subdirectory(gigasecond)
+add_subdirectory(secret-handshake)
