22. sum-of-multiples

--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -26,3 +26,4 @@ add_subdirectory(queen-attack)
 add_subdirectory(say)
 add_subdirectory(gigasecond)
 add_subdirectory(secret-handshake)
+add_subdirectory(sum-of-multiples)
