--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -27,3 +27,4 @@ add_subdirectory(say)
 add_subdirectory(gigasecond)
 add_subdirectory(secret-handshake)
 add_subdirectory(sum-of-multiples)
+add_subdirectory(robot-name)
