--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -28,3 +28,4 @@ add_subdirectory(gigasecond)
 add_subdirectory(secret-handshake)
 add_subdirectory(sum-of-multiples)
 add_subdirectory(robot-name)
+add_subdirectory(clock)
