--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -29,3 +29,4 @@ add_subdirectory(secret-handshake)
 add_subdirectory(sum-of-multiples)
 add_subdirectory(robot-name)
 add_subdirectory(clock)
+add_subdirectory(meetup)
