--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -30,3 +30,4 @@ add_subdirectory(sum-of-multiples)
 add_subdirectory(robot-name)
 add_subdirectory(clock)
 add_subdirectory(meetup)
+add_subdirectory(beer-song)
