--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -31,3 +31,4 @@ add_subdirectory(robot-name)
 add_subdirectory(clock)
 add_subdirectory(meetup)
 add_subdirectory(beer-song)
+add_subdirectory(binary-search)
