--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -32,3 +32,4 @@ add_subdirectory(clock)
 add_subdirectory(meetup)
 add_subdirectory(beer-song)
 add_subdirectory(binary-search)
+add_subdirectory(phone-number)
