--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -33,3 +33,4 @@ add_subdirectory(meetup)
 add_subdirectory(beer-song)
 add_subdirectory(binary-search)
 add_subdirectory(phone-number)
+add_subdirectory(series)
