--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -34,3 +34,4 @@ add_subdirectory(beer-song)
 add_subdirectory(binary-search)
 add_subdirectory(phone-number)
 add_subdirectory(series)
+add_subdirectory(complex-numbers)
