--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -35,3 +35,4 @@ add_subdirectory(binary-search)
 add_subdirectory(phone-number)
 add_subdirectory(series)
 add_subdirectory(complex-numbers)
+add_subdirectory(food-chain)
