--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -36,3 +36,4 @@ add_subdirectory(phone-number)
 add_subdirectory(series)
 add_subdirectory(complex-numbers)
 add_subdirectory(food-chain)
+add_subdirectory(roman-numerals)
