--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -38,5 +38,5 @@ add_subdirectory(complex-numbers)
 add_subdirectory(food-chain)
 add_subdirectory(roman-numerals)
 add_subdirectory(word-count)
-
+add_subdirectory(circular-buffer)
 
