--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -40,3 +40,4 @@ add_subdirectory(roman-numerals)
 add_subdirectory(word-count)
 add_subdirectory(circular-buffer)
 add_subdirectory(crypto-square)
+add_subdirectory(etl)
