--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -41,3 +41,4 @@ add_subdirectory(word-count)
 add_subdirectory(circular-buffer)
 add_subdirectory(crypto-square)
 add_subdirectory(etl)
+add_subdirectory(anagram)
