38. binary-search-tree

--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -42,3 +42,4 @@ add_subdirectory(circular-buffer)
 add_subdirectory(crypto-square)
 add_subdirectory(etl)
 add_subdirectory(anagram)
+add_subdirectory(binary-search-tree)
