--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -43,3 +43,4 @@ add_subdirectory(crypto-square)
 add_subdirectory(etl)
 add_subdirectory(anagram)
 add_subdirectory(binary-search-tree)
+add_subdirectory(acronym)
