--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -44,3 +44,4 @@ add_subdirectory(etl)
 add_subdirectory(anagram)
 add_subdirectory(binary-search-tree)
 add_subdirectory(acronym)
+add_subdirectory(binary)
