--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -45,3 +45,4 @@ add_subdirectory(anagram)
 add_subdirectory(binary-search-tree)
 add_subdirectory(acronym)
 add_subdirectory(binary)
+add_subdirectory(isogram)
