--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -48,3 +48,4 @@ add_subdirectory(binary)
 add_subdirectory(isogram)
 add_subdirectory(pascals-triangle)
 add_subdirectory(perfect-numbers)
+add_subdirectory(scrabble-score)
