45. all-your-base

--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -49,3 +49,4 @@ add_subdirectory(isogram)
 add_subdirectory(pascals-triangle)
 add_subdirectory(perfect-numbers)
 add_subdirectory(scrabble-score)
+add_subdirectory(all-your-base)
