--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -50,3 +50,4 @@ add_subdirectory(pascals-triangle)
 add_subdirectory(perfect-numbers)
 add_subdirectory(scrabble-score)
 add_subdirectory(all-your-base)
+add_subdirectory(robot-simulator)
