--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -51,3 +51,4 @@ add_subdirectory(perfect-numbers)
 add_subdirectory(scrabble-score)
 add_subdirectory(all-your-base)
 add_subdirectory(robot-simulator)
+add_subdirectory(bank-account)
