48. largest-series-product

--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -52,3 +52,4 @@ add_subdirectory(scrabble-score)
 add_subdirectory(all-your-base)
 add_subdirectory(robot-simulator)
 add_subdirectory(bank-account)
+add_subdirectory(largest-series-product)
