--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -53,3 +53,4 @@ add_subdirectory(all-your-base)
 add_subdirectory(robot-simulator)
 add_subdirectory(bank-account)
 add_subdirectory(largest-series-product)
+add_subdirectory(isbn-verifier)
