--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -54,3 +54,4 @@ add_subdirectory(robot-simulator)
 add_subdirectory(bank-account)
 add_subdirectory(largest-series-product)
 add_subdirectory(isbn-verifier)
+add_subdirectory(linked-list)
