51. simple-linked-list

--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -55,3 +55,4 @@ add_subdirectory(bank-account)
 add_subdirectory(largest-series-product)
 add_subdirectory(isbn-verifier)
 add_subdirectory(linked-list)
+add_subdirectory(simple-linked-list)
