--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -56,3 +56,4 @@ add_subdirectory(largest-series-product)
 add_subdirectory(isbn-verifier)
 add_subdirectory(linked-list)
 add_subdirectory(simple-linked-list)
+add_subdirectory(diamond)
