53. run-length-encoding

--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -57,3 +57,4 @@ add_subdirectory(isbn-verifier)
 add_subdirectory(linked-list)
 add_subdirectory(simple-linked-list)
 add_subdirectory(diamond)
+add_subdirectory(run-length-encoding)
