--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -58,3 +58,4 @@ add_subdirectory(linked-list)
 add_subdirectory(simple-linked-list)
 add_subdirectory(diamond)
 add_subdirectory(run-length-encoding)
+add_subdirectory(resistor-color)
