--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -59,3 +59,4 @@ add_subdirectory(simple-linked-list)
 add_subdirectory(diamond)
 add_subdirectory(run-length-encoding)
 add_subdirectory(resistor-color)
+add_subdirectory(resistor-color-duo)
