--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -60,3 +60,4 @@ add_subdirectory(diamond)
 add_subdirectory(run-length-encoding)
 add_subdirectory(resistor-color)
 add_subdirectory(resistor-color-duo)
+add_subdirectory(flower-field)
