--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -61,3 +61,4 @@ add_subdirectory(run-length-encoding)
 add_subdirectory(resistor-color)
 add_subdirectory(resistor-color-duo)
 add_subdirectory(flower-field)
+add_subdirectory(sublist)
