--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -62,3 +62,4 @@ add_subdirectory(resistor-color)
 add_subdirectory(resistor-color-duo)
 add_subdirectory(flower-field)
 add_subdirectory(sublist)
+add_subdirectory(zebra-puzzle)
