--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -63,3 +63,4 @@ add_subdirectory(resistor-color-duo)
 add_subdirectory(flower-field)
 add_subdirectory(sublist)
 add_subdirectory(zebra-puzzle)
+add_subdirectory(list-ops)
