--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -64,3 +64,4 @@ add_subdirectory(flower-field)
 add_subdirectory(sublist)
 add_subdirectory(zebra-puzzle)
 add_subdirectory(list-ops)
+add_subdirectory(knapsack)
