--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -65,3 +65,4 @@ add_subdirectory(sublist)
 add_subdirectory(zebra-puzzle)
 add_subdirectory(list-ops)
 add_subdirectory(knapsack)
+add_subdirectory(two-bucket)
