--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -66,3 +66,4 @@ add_subdirectory(zebra-puzzle)
 add_subdirectory(list-ops)
 add_subdirectory(knapsack)
 add_subdirectory(two-bucket)
+add_subdirectory(yacht)
