--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -67,3 +67,4 @@ add_subdirectory(list-ops)
 add_subdirectory(knapsack)
 add_subdirectory(two-bucket)
 add_subdirectory(yacht)
+add_subdirectory(dnd-character)
