--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -68,3 +68,4 @@ add_subdirectory(knapsack)
 add_subdirectory(two-bucket)
 add_subdirectory(yacht)
 add_subdirectory(dnd-character)
+add_subdirectory(spiral-matrix)
