65. parallel-letter-frequency

--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -69,3 +69,4 @@ add_subdirectory(two-bucket)
 add_subdirectory(yacht)
 add_subdirectory(dnd-character)
 add_subdirectory(spiral-matrix)
+add_subdirectory(parallel-letter-frequency)
