--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -70,3 +70,4 @@ add_subdirectory(yacht)
 add_subdirectory(dnd-character)
 add_subdirectory(spiral-matrix)
 add_subdirectory(parallel-letter-frequency)
+add_subdirectory(pig-latin)
