--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -71,3 +71,4 @@ add_subdirectory(dnd-character)
 add_subdirectory(spiral-matrix)
 add_subdirectory(parallel-letter-frequency)
 add_subdirectory(pig-latin)
+add_subdirectory(twelve-days)
