--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -72,3 +72,4 @@ add_subdirectory(spiral-matrix)
 add_subdirectory(parallel-letter-frequency)
 add_subdirectory(pig-latin)
 add_subdirectory(twelve-days)
+add_subdirectory(log-levels)
