--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -73,3 +73,4 @@ add_subdirectory(parallel-letter-frequency)
 add_subdirectory(pig-latin)
 add_subdirectory(twelve-days)
 add_subdirectory(log-levels)
+add_subdirectory(reverse-string)
