--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -74,3 +74,4 @@ add_subdirectory(pig-latin)
 add_subdirectory(twelve-days)
 add_subdirectory(log-levels)
 add_subdirectory(reverse-string)
+add_subdirectory(freelancer-rates)
