--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -75,3 +75,4 @@ add_subdirectory(twelve-days)
 add_subdirectory(log-levels)
 add_subdirectory(reverse-string)
 add_subdirectory(freelancer-rates)
+add_subdirectory(vehicle-purchase)
