72. interest-is-interesting

--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -76,3 +76,4 @@ add_subdirectory(log-levels)
 add_subdirectory(reverse-string)
 add_subdirectory(freelancer-rates)
 add_subdirectory(vehicle-purchase)
+add_subdirectory(interest-is-interesting)
