73. making-the-grade

--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -77,3 +77,4 @@ add_subdirectory(reverse-string)
 add_subdirectory(freelancer-rates)
 add_subdirectory(vehicle-purchase)
 add_subdirectory(interest-is-interesting)
+add_subdirectory(making-the-grade)
