--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -78,3 +78,4 @@ add_subdirectory(freelancer-rates)
 add_subdirectory(vehicle-purchase)
 add_subdirectory(interest-is-interesting)
 add_subdirectory(making-the-grade)
+add_subdirectory(ellens-alien-game)
