75. difference-of-squares

--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -79,3 +79,4 @@ add_subdirectory(vehicle-purchase)
 add_subdirectory(interest-is-interesting)
 add_subdirectory(making-the-grade)
 add_subdirectory(ellens-alien-game)
+add_subdirectory(difference-of-squares)
