--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -80,3 +80,4 @@ add_subdirectory(interest-is-interesting)
 add_subdirectory(making-the-grade)
 add_subdirectory(ellens-alien-game)
 add_subdirectory(difference-of-squares)
+add_subdirectory(sieve)
