--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -81,3 +81,4 @@ add_subdirectory(making-the-grade)
 add_subdirectory(ellens-alien-game)
 add_subdirectory(difference-of-squares)
 add_subdirectory(sieve)
+add_subdirectory(election-day)
