--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -82,3 +82,4 @@ add_subdirectory(ellens-alien-game)
 add_subdirectory(difference-of-squares)
 add_subdirectory(sieve)
 add_subdirectory(election-day)
+add_subdirectory(troll-the-trolls)
