--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -83,3 +83,4 @@ add_subdirectory(difference-of-squares)
 add_subdirectory(sieve)
 add_subdirectory(election-day)
 add_subdirectory(troll-the-trolls)
+add_subdirectory(doctor-data)
