--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -84,3 +84,4 @@ add_subdirectory(sieve)
 add_subdirectory(election-day)
 add_subdirectory(troll-the-trolls)
 add_subdirectory(doctor-data)
+add_subdirectory(lasagna-master)
