--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -85,3 +85,4 @@ add_subdirectory(election-day)
 add_subdirectory(troll-the-trolls)
 add_subdirectory(doctor-data)
 add_subdirectory(lasagna-master)
+add_subdirectory(speedywagon)
