--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -86,3 +86,4 @@ add_subdirectory(troll-the-trolls)
 add_subdirectory(doctor-data)
 add_subdirectory(lasagna-master)
 add_subdirectory(speedywagon)
+add_subdirectory(power-of-troy)
