--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -87,3 +87,4 @@ add_subdirectory(doctor-data)
 add_subdirectory(lasagna-master)
 add_subdirectory(speedywagon)
 add_subdirectory(power-of-troy)
+add_subdirectory(allergies)
