--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -88,3 +88,4 @@ add_subdirectory(lasagna-master)
 add_subdirectory(speedywagon)
 add_subdirectory(power-of-troy)
 add_subdirectory(allergies)
+add_subdirectory(protein-translation)
