--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -89,3 +89,4 @@ add_subdirectory(speedywagon)
 add_subdirectory(power-of-troy)
 add_subdirectory(allergies)
 add_subdirectory(protein-translation)
+add_subdirectory(prime-factors)
