--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -90,3 +90,4 @@ add_subdirectory(power-of-troy)
 add_subdirectory(allergies)
 add_subdirectory(protein-translation)
 add_subdirectory(prime-factors)
+add_subdirectory(atbash-cipher)
