--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -91,3 +91,4 @@ add_subdirectory(allergies)
 add_subdirectory(protein-translation)
 add_subdirectory(prime-factors)
 add_subdirectory(atbash-cipher)
+add_subdirectory(trinary)
