--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -92,3 +92,4 @@ add_subdirectory(protein-translation)
 add_subdirectory(prime-factors)
 add_subdirectory(atbash-cipher)
 add_subdirectory(trinary)
+add_subdirectory(bob)
