--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -93,3 +93,4 @@ add_subdirectory(prime-factors)
 add_subdirectory(atbash-cipher)
 add_subdirectory(trinary)
 add_subdirectory(bob)
+add_subdirectory(matching-brackets)
