--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -94,3 +94,4 @@ add_subdirectory(atbash-cipher)
 add_subdirectory(trinary)
 add_subdirectory(bob)
 add_subdirectory(matching-brackets)
+add_subdirectory(luhn)
