--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -95,3 +95,4 @@ add_subdirectory(trinary)
 add_subdirectory(bob)
 add_subdirectory(matching-brackets)
 add_subdirectory(luhn)
+add_subdirectory(armstrong-numbers)
