--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -96,3 +96,4 @@ add_subdirectory(bob)
 add_subdirectory(matching-brackets)
 add_subdirectory(luhn)
 add_subdirectory(armstrong-numbers)
+add_subdirectory(hexadecimal)
