--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -97,3 +97,4 @@ add_subdirectory(matching-brackets)
 add_subdirectory(luhn)
 add_subdirectory(armstrong-numbers)
 add_subdirectory(hexadecimal)
+add_subdirectory(darts)
