--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -98,3 +98,4 @@ add_subdirectory(luhn)
 add_subdirectory(armstrong-numbers)
 add_subdirectory(hexadecimal)
 add_subdirectory(darts)
+add_subdirectory(high-scores)
