--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -99,3 +99,4 @@ add_subdirectory(armstrong-numbers)
 add_subdirectory(hexadecimal)
 add_subdirectory(darts)
 add_subdirectory(high-scores)
+add_subdirectory(eliuds-eggs)
