--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -100,3 +100,4 @@ add_subdirectory(hexadecimal)
 add_subdirectory(darts)
 add_subdirectory(high-scores)
 add_subdirectory(eliuds-eggs)
+add_subdirectory(rotational-cipher)
