--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -101,3 +101,4 @@ add_subdirectory(darts)
 add_subdirectory(high-scores)
 add_subdirectory(eliuds-eggs)
 add_subdirectory(rotational-cipher)
+add_subdirectory(kindergarten-garden)
