98. rail-fence-cipher

--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -102,3 +102,4 @@ add_subdirectory(high-scores)
 add_subdirectory(eliuds-eggs)
 add_subdirectory(rotational-cipher)
 add_subdirectory(kindergarten-garden)
+add_subdirectory(rail-fence-cipher)
