--- a/exercism-cpp/CMakeLists.txt
+++ b/exercism-cpp/CMakeLists.txt
@@ -103,3 +103,4 @@ add_subdirectory(eliuds-eggs)
 add_subdirectory(rotational-cipher)
 add_subdirectory(kindergarten-garden)
 add_subdirectory(rail-fence-cipher)
+add_subdirectory(affine-cipher)
